# bcgl

./: .gitignore  CMakeLists.txt  README.md  __bcgl_project_name__.sublime-project  bcsync  bcsync.py  build.sh  clean.sh  run.sh
assets/: default.glsl
build_scripts/: android-build.bat  android-clean.bat  android-run.bat  android-run.sh  mingw-clean.bat  mingw-run.bat  unix-clean.sh  unix-run.sh  web-build.bat  web-deploy.bat
demo/: .gitignore  CMakeLists.txt  bcmanifest.json  demo.c  demo.h  example_01_box.c  example_02_mesh.c  example_03_model.c  example_04_performance.c  example_05_lighting.c  example_box.c  example_game.c  example_lighting.c  main.c
demo/assets/test_dir/: lines_mac.txt
demo/examples/: CMakeLists.txt
demo/projects/android/: AndroidManifest.xml  CMakeLists.txt  build.gradle  build.sh  clean.bat  run.bat  run.sh  version.c
demo/projects/desktop/: CMakeLists.txt  build.bat  run.bat  run.sh  version.c
demo/projects/web/: CMakeLists.txt  build.bat  clean.sh  index.html  version.c
demo/src/: CMakeLists.txt  bc_test_file.cpp  demo.cpp  main.cpp
examples/: CMakeLists.txt  example_lighting.c
include/: bcbase.h  bcgl.h  bcgl_android.h  bcgl_app.h  bcgl_common.h  bcgl_file.h  bcgl_gfx.h  bcmath.h
java/info/djukic/bcgl/: BCGLActivity.java  BCGLLib.java
scripts/: cm-build.bat  cm-build.sh  cm-clean.bat  cm-clean.sh
src/: CMakeLists.txt  __bcgl_project_init__CMakeLists.txt  bcgl.h  bcgl_app.c  bcgl_app_android.c  bcgl_app_common.c  bcgl_app_glfw.c  bcgl_app_web.c  bcgl_common.c  bcgl_core_glfw.c  bcgl_external.c  bcgl_file.c  bcgl_gfx.c  bcgl_gfx_draw.c  bcgl_gfx_font.c  bcgl_gfx_geometry.c  bcgl_gfx_model.c  bcgl_gl.c  bcgl_internal.h  bcgl_opengl.h  bcmath._c  bcmath.c  bcmath.h  bcutils.c  example.c
src/bcgl/include/: bcgl_gfx.h  bcgl_opengl.h
src/bcgl/src/: bcgl_file.c  bcgl_gfx.c  bcutils.c
src/bcgl/src/port/: bcgl_app_glfw.c  bcgl_app_web.c
src/example/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt  example_lighting.c
src/game/: CMakeLists.txt  __bcgl_project_init__CMakeLists.txt  main.cpp
src/include/: bcgl.h  bcgl_android.h  bcgl_desktop.h  bcgl_opengl.h  bcmath.h
src/port/: bcgl_app_android.c  bcgl_app_glfw.c  bcgl_app_web.c  bcgl_window_egl.c
tools/: bcgl_setup.sh  create_project.py
tools/build_scripts/: android-build.bat  android-clean.bat  android-run.bat  android-run.sh  cm-ndk.sh  mingw-build.bat  mingw-run.bat  unix-build.sh  web-clean.bat
tools/project_template/: .gitignore  _name_.sublime-project  bcmanifest.json
tools/project_template/projects/android/: AndroidManifest.xml  CMakeLists.txt  build.bat  build.gradle  clean.sh  run.bat  run.sh
tools/project_template/projects/desktop/: CMakeLists.txt  build.sh  run.bat  run.sh
tools/project_template/projects/web/: CMakeLists.txt  deploy.bat  index.html
tools/project_template/src/: CMakeLists.txt  main.cpp
